--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.5'
 	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 	id 'java'
+	id "org.flywaydb.flyway" version "9.0.1"
 }
 
 group = 'com.oscar'
@@ -42,9 +43,9 @@ dependencies {
 }
 
 flyway {
-	url = 'jdbc:postgresql://localhost:5432/xts'
-	user = 'xts'
-	password = 'xts'
+	url = 'jdbc:postgresql://localhost:5436/menuapp'
+	user = 'menuapp'
+	password = 'menuapp'
 	cleanDisabled = false
 	locations = ['classpath:db/migration/postgresql']
 }
